Bug 169414 - Ghost object remains in original position after object is moved
Summary: Ghost object remains in original position after object is moved
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:26.8.0 target:26...
Keywords: bibisected, bisected, regression
: 169745 169910 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-11-13 09:57 UTC by Jim Raykowski
Modified: 2025-12-09 21:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
video demonstration of the bug (419.98 KB, video/x-matroska)
2025-11-13 09:57 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2025-11-13 09:57:22 UTC
Created attachment 203941 [details]
video demonstration of the bug

Steps to repro:
Open a Draw or Impress document having some shape objects and move them to a different position by drag and drop.

Results:
A ghost of the moved object remains at the position it was. Changing to a different page and then changing back to the page with the ghosts makes them go away.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b5bcccc90beb5047c2d2f210eb63254ba983b2b4
CPU threads: 2; OS: Linux 6.14; UI render: default; VCL: qt5 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Seems this is the commit where this started to happen:

commit e6a8c40e5051363d5825bd09131b86cf8a2b659b 
Author: Noel Grandin <noel.grandin@collabora.co.uk>
Date: Tue Sep 30 14:54:37 2025 +0200 (6 weeks ago)

tdf#116975 Laggy behavior when clicking between table cells in impress
Comment 1 jcline 2025-11-15 04:39:36 UTC
I cannot reproduce in Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

I can reproduce in Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 2 rram 2025-11-16 22:45:25 UTC
Hello Jim Raykowski,

I am confirming I had similar results to jcline's finding. The issue was present in both Draw and Impress 26.2.0.0.alpha0+, but not in Draw and Impress 25.8.3.2. 

Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 8; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 3 Noel Grandin 2025-11-21 08:54:48 UTC
This was probably fixed with

commit 1c8b8d1fb80e6445aaeca2f2df6816d223277dbc
Author: Noel Grandin <noelgrandin@gmail.com>
Date:   Fri Nov 7 16:38:40 2025 +0200

    tdf#168928 Draw object not removed from the view after delete
    
    regression from
      commit e6a8c40e5051363d5825bd09131b86cf8a2b659b
      Author: Noel Grandin <noel.grandin@collabora.co.uk>
      Date:   Tue Sep 30 14:54:37 2025 +0200
      tdf#116975 Laggy behavior when clicking between table cells in impress
Comment 4 nobu 2025-11-30 21:48:05 UTC
This issue also occurs in Calc and Writer.

Please test by arranging multiple shapes.
When there's only one shape, the delay occurs but sometimes no ghosting effect remains.
Comment 5 Commit Notification 2025-12-01 12:43:34 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8a7b5d8b3af8eab09209ce1748ddc5b5c2feee91

tdf#169414 Ghost object remains in original position after object is moved

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Buovjaga 2025-12-05 07:12:08 UTC
*** Bug 169745 has been marked as a duplicate of this bug. ***
Comment 7 Eyal Rozenberg 2025-12-05 17:07:56 UTC
I _think_ I am still seeing this with:

Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0686b1972806fe8b711de5ba64039fb38cd14889
CPU threads: 4; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IL (en_IL); UI: en-US
Calc: CL threaded

and that's from today (Fri Dec 05 02:12:41 2025 +0100)
Comment 8 Eyal Rozenberg 2025-12-05 18:44:44 UTC
(In reply to Eyal Rozenberg from comment #7)

... oh, and - I'm seeing this when _resizing_, not just when moving.
Comment 9 Buovjaga 2025-12-05 18:49:01 UTC
(In reply to Eyal Rozenberg from comment #8)
> (In reply to Eyal Rozenberg from comment #7)
> 
> ... oh, and - I'm seeing this when _resizing_, not just when moving.

This is now seen only when using the mouse and no longer in Writer. Seen in Calc, Impress and Draw.
Comment 10 Takenori Yasuda 2025-12-06 03:25:13 UTC
I agree with Comment 7, Comment 8 and Comment 9. This bug no longer occurs in Writer, but it still occurs in Calc, Impress, and Draw.

Additionally, in Impress and Draw the objects stop displaying after moving. It seems the objects themselves still exist.

Tested with:
Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb103-1-TDF/2025-12-04_03.03.16/
Comment 11 Eyal Rozenberg 2025-12-06 08:53:40 UTC
Reopening based on previous comments.
Comment 12 Commit Notification 2025-12-08 13:16:50 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/de9e8e4e3fa6f596c3a6b11c57c27d4131fbbda6

tdf#169414 Ghost object remains in original position after object is moved

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Buovjaga 2025-12-08 19:43:45 UTC
Verified, thanks. Did a cherry pick to 26.2.

Arch Linux 64-bit
Version: 26.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 722f5e3aef579784c28b5e38cb8a9f457409be3b
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 8 December 2025
Comment 14 Commit Notification 2025-12-08 23:43:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/711c722948ccf265a59c519b8b1f591e23ec31f3

tdf#169414 Ghost object remains in original position after object is moved

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 nobu 2025-12-09 21:35:59 UTC
*** Bug 169910 has been marked as a duplicate of this bug. ***