tdf#169414 Ghost object remains in original position after object is moved

revert
    commit 1c8b8d1fb80e6445aaeca2f2df6816d223277dbc
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Fri Nov 7 16:38:40 2025 +0200
    tdf#168928 Draw object not removed from the view after delete
and
    commit e6a8c40e5051363d5825bd09131b86cf8a2b659b
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Sep 30 14:54:37 2025 +0200
    tdf#116975 Laggy behavior when clicking between table cells in impress

No idea why this is going wrong, there must be some implicit thing kicking in that I removed.

Change-Id: I5da81be9d6a8305163a70a4639ff0229acfb2329
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194864
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins