svx/source/sdr/contact/viewobjectcontact.cxx
@@ -155,8 +155,7 @@ ViewObjectContact::ViewObjectContact(ObjectContact& rObjectContact, ViewContact&
 :   mrObjectContact(rObjectContact),
     mrViewContact(rViewContact),
     mnActionChangedCount(0),
-    mbLazyInvalidate(false),
-    mbInvalidateViewOnDestruct(false)
+    mbLazyInvalidate(false)
 {
     // make the ViewContact remember me
     mrViewContact.AddViewObjectContact(*this);
@@ -167,21 +166,11 @@ ViewObjectContact::ViewObjectContact(ObjectContact& rObjectContact, ViewContact&
 
 ViewObjectContact::~ViewObjectContact()
 {
-    if (mbInvalidateViewOnDestruct)
+    // if the object range is empty, then we have never had the primitive range change, so nothing to invalidate
+    if (!maObjectRange.isEmpty())
     {
-        // used cached object range to limit invalidation
-        if (!maObjectRange.isEmpty())
-        {
-            // invalidate in view
-            GetObjectContact().InvalidatePartOfView(maObjectRange);
-        }
-        else
-        {
-            // we do not currently have cached range information, so just invalidate the whole viewport
-            const drawinglayer::geometry::ViewInformation2D& rViewInfo2D = GetObjectContact().getViewInformation2D();
-            if (!rViewInfo2D.getViewport().isEmpty())
-                GetObjectContact().InvalidatePartOfView(rViewInfo2D.getViewport());
-        }
+        // invalidate in view
+        GetObjectContact().InvalidatePartOfView(maObjectRange);
     }
 
     // delete PrimitiveAnimation
@@ -532,8 +521,9 @@ drawinglayer::primitive2d::Primitive2DContainer const & ViewObjectContact::getPr
         // check for animated stuff
         const_cast< ViewObjectContact* >(this)->checkForPrimitive2DAnimations();
 
-        const_cast< ViewObjectContact* >(this)->maObjectRange.reset();
-        mbInvalidateViewOnDestruct = true;
+        // always update object range when PrimitiveSequence changes
+        const drawinglayer::geometry::ViewInformation2D& rViewInformation2D(GetObjectContact().getViewInformation2D());
+        const_cast< ViewObjectContact* >(this)->maObjectRange = mxPrimitive2DSequence.getB2DRange(rViewInformation2D);
     }
 
     // return current Primitive2DContainer
