svx/source/svdraw/sdrhittesthelper.cxx
@@ -120,25 +120,20 @@ bool ViewObjectContactPrimitiveHit(
     bool bTextOnly,
     drawinglayer::primitive2d::Primitive2DContainer* pHitContainer)
 {
-    // Only use the range if we already have it, computing the range can be more expensive
-    // than running the HitTestProcessor.
-    if (rVOC.hasCachedObjectRange())
+    basegfx::B2DRange aObjectRange(rVOC.getObjectRange());
+
+    if(aObjectRange.isEmpty())
+        return false;
+
+    // first do a rough B2DRange based HitTest; do not forget to
+    // include the HitTolerance if given
+    if(rLogicHitTolerance.getX() > 0 || rLogicHitTolerance.getY() > 0)
     {
-        basegfx::B2DRange aObjectRange(rVOC.getObjectRange());
-
-        if(aObjectRange.isEmpty())
-            return false;
-
-        // first do a rough B2DRange based HitTest; do not forget to
-        // include the HitTolerance if given
-        if(rLogicHitTolerance.getX() > 0 || rLogicHitTolerance.getY() > 0)
-        {
-            aObjectRange.grow(rLogicHitTolerance);
-        }
-
-        if(!aObjectRange.isInside(rHitPosition))
-            return false;
+        aObjectRange.grow(rLogicHitTolerance);
     }
+
+    if(!aObjectRange.isInside(rHitPosition))
+        return false;
 
     // get primitive sequence
     sdr::contact::DisplayInfo aDisplayInfo;
